--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,19 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+
+.gradle
+*.hprof
+.git
+/local.properties
+/.idea/caches/build_file_checksums.ser
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+.DS_Store
+/build
+/captures
+
+.idea/
+
+google-services.json
