--- a/uicomponent/build.gradle
+++ b/uicomponent/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
+
 
 android {
     compileSdkVersion 30
@@ -32,3 +34,35 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
+
+String versionName = "1.1.0"
+String outPutPath = "file:///Users/gongxiaoyun/Documents/custom-component-aar"
+
+ext {
+    PUBLISH_GROUP_ID = 'com.ll'
+    PUBLISH_ARTIFACT_ID = 'uicomponent'
+    PUBLISH_VERSION = versionName
+}
+
+uploadArchives {
+    repositories.mavenDeployer {
+        // 输出地址
+        repository(url:outPutPath)
+
+        pom.project {
+            groupId project.PUBLISH_GROUP_ID
+            artifactId project.PUBLISH_ARTIFACT_ID
+            version project.PUBLISH_VERSION
+        }
+    }
+}
+
+// 源代码
+//task androidSourcesJar(type: Jar) {
+//    archiveClassifier = 'sources'
+//    from android.sourceSets.main.java.sourceFiles
+//}
+
+//artifacts {
+//    archives androidSourcesJar
+//}
