--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".example.RotateTextViewExampleActivity"></activity>
+        <activity android:name=".example.ClearEditTextViewExampleActivity"></activity>
+        <activity android:name=".example.RotateTextViewExampleActivity" />
         <activity android:name=".example.ShapeTextViewExampleActivity" />
         <activity android:name=".example.FormViewExampleActivity" />
         <activity android:name=".example.EmptyViewExampleActivity" />
